workspace/lib/nginx-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.10
---
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-service
  namespace: default

spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
