workspace/lib/ingress-routing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    "traefik.ingress.kubernetes.io/router.middlewares": default-test-stripprefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: demo-nginx-service
          servicePort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /hello
